# PCLP1

./: CMakeLists.txt  PCLP1 - Shortcut.lnk  README.md  a.out
Laboratorul1/: Laboratorul 01 - Seminar.md
Laboratorul10/: README.md  problema1.c  problema2.c  problema3.c  problema4  problema4.c
Laboratorul11/: README.md  input.txt  input1.txt  myfile.txt  output.txt  p1  pr3B  pr3a  pr3b  pr4  problema1  problema1.c  problema2  problema2.c  problema3A  problema3A.c  problema3B  problema3B.c  problema4  problema4.c  tabela_de_codare.in  tabela_de_codificare.in
Laboratorul12/: Produs.h  README.md  fisier  main.c  problema1  problema1.c  problema2.c  problema3.c  problema4.c  problema7.c
Laboratorul2/: Laborator 02 - Funcții de citire și scriere.md
Laboratorul3/: Laborator 03 - Instrucțiunile limbajului C.md
Laboratorul4/: Laboratorul 04 - Tablouri.md
Laboratorul5/: CMakeLists.txt  Laboratorul 05 - Definire și utilizare funcții.md  Makefile  README.md  a.out  lab5.md  p1  p2  p3  p4  p5  p6  p7  pr1  pr2  pr3  pr4  pr5  pr6  pr7  pr8  problema1  problema1.c  problema2  problema2.c  problema3  problema3.c  problema4  problema4.c  problema5  problema5.c  problema6  problema6.c  problema7  problema7.c  problema8  problema8.c
Laboratorul6/: Laboratorul 06 - Funcții cu vectori.md  Makefile  README.md  a.out  pr1  pr2  pr3  pr4  pr5  pr6  pr6fr  problema1  problema1.c  problema2  problema2.c  problema3  problema3.c  problema4  problema4.c  problema5  problema5.c  problema6  problema6.c
Laboratorul7/: Laboratorul 07 - Funcții cu pointeri; Șiruri de caractere.md  pr2.  (+14 more)
(+37 files in other folders)
