cmake_minimum_required(VERSION 3.23)
project(PCLP1 C)

set(CMAKE_C_STANDARD 11)

add_executable(PCLP1
        Laboratorul9/problema1.c
        Laboratorul9/problema2.c
        Laboratorul9/problema3.c
        Laboratorul9/problema4.c
        Laboratorul9/problema5.c
        Laboratorul9/problema6.c)
